--- a/src/App.css
+++ b/src/App.css
@@ -719,10 +719,6 @@ li
   background: #F1F4F8;
   border-radius: 8px 8px 0px 0px;
 
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
 }
 .table-content{
   width: 100%;
@@ -730,10 +726,6 @@ li
 
   background: #FFFFFF;
   text-align: center;
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
 }
 
 .control-table{
@@ -753,11 +745,6 @@ li
 
   background: #F1F4F8;
   border-radius: 8px 8px 0px 0px;
-
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
 }
 .control-table-content{
   width: 1049px;
@@ -1373,3 +1360,29 @@ bottom: 10%;
 
 }
 
+.btn-update{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap:2px;
+
+  width: 100%;
+  height: 22px;
+
+  background: none;
+  border: 0px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  color: #FF993C;
+
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.invisible {
+  visibility: hidden;
+}
