--- a/src/App.css
+++ b/src/App.css
@@ -111,10 +111,8 @@ flex-grow: 0;
   width: 100%;
   height: auto;
   left: 3%;
-  top: 29%;
+  top: 30.5%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 600;
   font-size: 15px;
   line-height: 26px;
@@ -138,17 +136,15 @@ flex-grow: 0;
   width: 100%;
   height: auto;
   left: 10%;
-  top: 27%;
+  top: 29%;
 }
 .control-fromdate-filter-label{
   position: absolute;
   width: 100%;
   height: auto;
   left: 3%;
-  top: 36%;
+  top: 37%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 600;
   font-size: 15px;
   line-height: 26px;
@@ -173,9 +169,9 @@ flex-grow: 0;
   width: 30%;
   height: auto;
   left: 50%;
-  top: 35.5%;
+  top: 36.5%;
 
-  background: #E0E0E0;
+  background: #F7F8FB;
   border: 0px;
   border-radius: 8px;
 }
@@ -242,6 +238,11 @@ flex-grow: 0;
   border: 2px solid #FF993C;
   border-radius: 8px;
 }
+.filter-button:hover{
+  background-color: #FF993C;
+  color: #FFFFFF;
+  border: 2.5px solid #FF993C;
+}
 .radio-row{
   display: flex;
   flex-direction: row;
@@ -258,11 +259,9 @@ flex-grow: 0;
   position: absolute;
   width: 81px;
   height: 30px;
-  left: 263px;
-  top: 24px;
+  left: 40%;
+  top: 2%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
@@ -276,24 +275,30 @@ flex-grow: 0;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  gap:10px;
 
   position: absolute;
   width: 573px;
   height: 24px;
-  left: 32px;
-  top: 203px;
+  left: 6%;
+  top: 44%;
 }
 .check-in-gate-filter{
-  display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0px;
 
+  display: flex;  
+  gap:30px;
+  justify-content: space-between;
+  flex-wrap: wrap;
   position: absolute;
-  width: 100%;
+  width: 80%;
   height: 24px;
-  left: 32px;
-  top: 281px;
+  left: 6%;
+  top: 58%;
+}
+.check-in-gate-filter div{
+  margin-right:14px;
 }
 .loc{
   box-sizing: border-box;
@@ -308,10 +313,10 @@ flex-grow: 0;
   font-weight: 600;
   color: #FF993C;
   position: absolute;
-  width: 160px;
-  height: 48px;
-  left:45px;
-  bottom: 23px;
+  width: 120px;
+  height: 32px;
+  left:15%;
+  bottom:3%;
 
   border: 2px solid #FF993C;
   border-radius: 8px;
@@ -320,11 +325,9 @@ flex-grow: 0;
   position: absolute;
   width: 131px;
   height: 26px;
-  left: 32px;
-  top: 247px;
+  left: 6%;
+  top: 50%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 26px;
@@ -340,11 +343,9 @@ flex-grow: 0;
   position: absolute;
   width: 66px;
   height: 26px;
-  left: 32px;
-  top: 81px;
+  left: 6%;
+  top: 16%;
   
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 26px;
@@ -369,8 +370,8 @@ flex-grow: 0;
   position: absolute;
   width: 143px;
   height: 40px;
-  left: 32px;
-  top: 112px;
+  left: 6%;
+  top: 24%;
   
   border: 1px solid #A5A8B1;
   border-radius: 8px;
@@ -379,8 +380,8 @@ flex-grow: 0;
   position: absolute;
   width: 128px;
   height: 26px;
-  left: 297px;
-  top: 80px;
+  left: 54%;
+  top: 16%;
   
   font-family: 'Montserrat';
   font-style: normal;
@@ -408,8 +409,8 @@ flex-grow: 0;
   position: absolute;
   width: 143px;
   height: 40px;
-  left: 297px;
-  top: 112px;
+  left: 54%;
+  top: 24%;
 
   border: 1px solid #A5A8B1;
   border-radius: 8px;
@@ -418,11 +419,9 @@ flex-grow: 0;
   position: absolute;
   width: 159px;
   height: 26px;
-  left: 32px;
-  top: 172px;
+  left: 6%;
+  top: 36%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 26px;
@@ -526,10 +525,6 @@ li
 
     background: #FFB800;
     border-radius: 8px;
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
 }
 
 .nav-link:focus{
@@ -544,10 +539,6 @@ li
 
     background: #FFB800;
     border-radius: 8px;
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
 }
 .nav-child{
   position: absolute;
@@ -563,7 +554,7 @@ li
 }
 .rendered-item{
   position: absolute;
-  width: 83%;
+  width: 85%;
   height: 108%;
   left: 13%;
   top:11.5%;
@@ -573,8 +564,8 @@ li
 }
 .control-item{
   position: absolute;
-  width: 58%;
-  height: 108%;
+  width: 60%;
+  height: 88%;
   left: 13%;
   top:11.5%;
 
@@ -584,8 +575,8 @@ li
 .filter-item{
   position: absolute;
   width: 25%;
-  height: 108%;
-  left: 71.5%;
+  height: 88%;
+  left: 73.5%;
   top: 11.5%;
 
   background: #FFFFFF;
@@ -593,8 +584,8 @@ li
 }
 .ticket-list{
   position: absolute;
-  width: 83%;
-  height: 108%;
+  width: 85%;
+  height: 88%;
   left: 13%;
   top:11.5%;
 
@@ -613,7 +604,7 @@ li
   width: 30%;
   height: 3%;
   left: 1.5%;
-  top: 8%;
+  top: 9%;
 
   background: url(images/search.png) no-repeat scroll 93% 50%;
   font-size: 15px;
@@ -633,15 +624,21 @@ li
 
   position: absolute;
   width: 10%;
-  height: 5%;
-  left: 75%;
-  top: 8%;
+  height: 32px;
+  left: 76%;
+  top: 10%;
 
   background-color: #FFFFFF;
   font-size: 12px;
   color: #FF993C;
   border: 1px solid #FF993C;
   border-radius: 6px;
+  cursor: pointer;
+}
+.locve:hover{
+  background-color: #FFFFFF;
+  color: #FF993C;
+  border: 1.5px solid #FF993C;
 }
 .csv{
   box-sizing: border-box;
@@ -654,16 +651,50 @@ li
   gap: 10px;
 
   position: absolute;
-  width: 10%;
-  height: 5%;
-  left: 86%;
-  top: 8%;
+  width:100px;
+  height: 32px;
+  left: 87%;
+  top: 10%;
 
   background-color: #FFFFFF;
   font-size: 12px;
   color: #FF993C;
   border: 1px solid #FF993C;
   border-radius: 8px;
+  cursor: pointer;
+}
+.csv:hover{
+  background-color: #FFFFFF;
+  color: #FF993C;
+  border: 1.5px solid #FF993C;
+}
+.csv-doisoat{
+  box-sizing: border-box;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items:center;
+  padding: 11px 24px;
+  gap: 10px;
+
+  position: absolute;
+  width:100px;
+  height: 32px;
+  left: 83%;
+  top: 10%;
+
+  background-color: #FFFFFF;
+  font-size: 12px;
+  color: #FF993C;
+  border: 1px solid #FF993C;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.csv-doisoat:hover{
+  background-color: #FFFFFF;
+  color: #FF993C;
+  border: 1.5px solid #FF993C;
 }
 .doisoat{
   display: flex;
@@ -674,15 +705,21 @@ li
   border:0px;
   position: absolute;
   width: 14%;
-  height: 5%;
+  height: 32px;
   left: 82%;
-  top: 8%;
+  top: 10%;
   font-size: 12.5px;
   color: #FFFFFF;
   font-weight: 600;
 
   background: #FF993C;
   border-radius: 8px;
+  cursor: pointer;
+}
+.doisoat:hover{
+  background-color: #f89130;
+  color: #FFFFFF;
+  border: 2.5px solid #FF993C;
 }
 .taove{
   display: flex;
@@ -693,15 +730,21 @@ li
   border:0px;
   position: absolute;
   width: 10%;
-  height: 5%;
-  left: 75%;
-  top: 8%;
+  height: 32px;
+  left: 76%;
+  top: 10%;
   font-size: 12.5px;
   color: #FFFFFF;
   font-weight: 600;
 
   background: #FF993C;
   border-radius: 8px;
+  cursor: pointer;
+}
+.taove:hover{
+  background-color: #f89130;
+  color: #FFFFFF;
+  border: 2.5px solid #FF993C;
 }
 .title{
   position: absolute;
@@ -724,7 +767,7 @@ li
   width: 95%;
   height: 30px;
   left: 1.5%;
-  top: 15%;
+  top: 19%;
   font-size: 13px;
 
   background: #F1F4F8;
@@ -752,7 +795,7 @@ li
   width: 95%;
   height: 30px;
   left: 1.5%;
-  top: 15%;
+  top: 19%;
   font-size: 13px;
 
   background: #F1F4F8;
@@ -833,9 +876,9 @@ color: #1E0D03;
   box-sizing: border-box;
   position: absolute;
   top:-5%;
-  left:22%;
-  width: 634px;
-  height: 454px;
+  left:25%;
+  width: 550px;
+  height: 400px;
   margin: auto;
   margin-top: 10%;
 
@@ -871,8 +914,8 @@ color: #1E0D03;
   position: absolute;
   width: 40%;
   height: 6%;
-  left: 32px;
-  top: 112px;
+  left:5%;
+  top:24%;
   padding: 10px;
   font-size: 13px;
   
@@ -1007,8 +1050,6 @@ opacity: 0.7;
   left:5%;
   top:42%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 600;
   font-size: 13px;
   line-height: 26px;
@@ -1052,16 +1093,17 @@ opacity: 0.7;
   flex-direction: row;
   align-items: flex-start;
   padding: 10px 12px;
+  margin:2px;
   gap: 10px;
   border: 0px;
   width: 100px;
-  height: 13px;
+  height: 12px;
 
   background: #F1F4F8;
   border-radius: 8px;
 
   flex: none;
-  order: 2;
+  order: 0;
   flex-grow: 0;
 }
 .combo-ticket-input{
@@ -1072,14 +1114,51 @@ opacity: 0.7;
   gap: 10px;
 
   width: 100px;
-  height: 13px;
+  height: 12px;
+  border:0px;
+  background: #F1F4F8;
+  border-radius: 8px;
+  margin:2px;
+
+  flex: none;
+  order: 0;
+}
+.update-combo-quantity-input{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px 12px;
+
+  width: 50px;
+  height: 12px;
   border:0px;
   background: #F1F4F8;
   border-radius: 8px;
 
   flex: none;
   order: 2;
-  flex-grow: 0;
+}
+.slash{
+  flex: none;
+  order: 1;
+}
+.slash-ve{
+  order: 3;
+}
+.combo-quantity-input{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px 12px;
+
+  width: 50px;
+  height: 12px;
+  border:0px;
+  background: #F1F4F8;
+  border-radius: 8px;
+
+  flex: none;
+  order: 2;
 }
 .label-status{
   position: absolute;
@@ -1137,10 +1216,16 @@ opacity: 0.7;
   font-size: 13px;
   border: 2.5px solid #FF993C;
   border-radius: 8px;
+  background-color: #FFFFFF;
   
   flex: none;
   order: 0;
   flex-grow: 0;
+}
+.huy:hover{
+  background-color: #FF993C;
+  color: #FFFFFF;
+  border: 2.5px solid #FF993C;
 }
 .luu{
   display: flex;
@@ -1162,6 +1247,11 @@ opacity: 0.7;
   order: 1;
   flex-grow: 0;
 }
+.luu:hover{
+  background-color: #f89130;
+  color: #FFFFFF;
+  border: 2.5px solid #FF993C;
+}
 
 .button-holder{
   display: flex;
@@ -1181,7 +1271,7 @@ bottom: 10%;
   position: absolute;
   width: 89px;
   height: 26px;
-  left: 32px;
+  left: 5%;
   top: 17%;
 
   font-weight: 600;
@@ -1203,8 +1293,8 @@ bottom: 10%;
   position: absolute;
   width: 41%;
   height: 32px;
-  left: 32px;
-  top: 112px;
+  left:5%;
+  top:22%;
   
   /* Grey/4 */
   
@@ -1239,7 +1329,7 @@ bottom: 10%;
   width: 41%;
   height: 32px;
   left: 55%;
-  top: 112px;
+  top:22%;
   
   /* Grey/4 */
   
@@ -1380,8 +1470,6 @@ bottom: 10%;
   left: 13%;
   top: 20.1rem;
 
-  font-family: 'Montserrat';
-  font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 22px;
@@ -1420,4 +1508,87 @@ bottom: 10%;
   width: 6px;
   height: 6px;
   padding-right:3px;
+}
+
+.pagination{
+  position: absolute;
+  width: 228px;
+  height: 20px;
+  left: 50%;
+  bottom: 5%;
+
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: #FF993C;
+}
+.page-item{
+  position: relative;
+  width: 8px;
+  height: 16px;
+  left: -40%;
+  top: -2px;
+  margin: 6px;
+
+  font-size: 14px;
+  line-height: 17px;
+
+  color: #1E0D03;
+}
+.page-item:hover{
+  box-sizing: border-box;
+
+  position: relative;
+  width: 8px;
+  height: 16px;
+  left: -40%;
+  top: -2px;
+  padding: 0px 12px 15px 3px;
+
+  border: 1px solid #FF993C;
+  border-radius: 4px;
+}
+.page-item:focus{
+  box-sizing: border-box;
+  padding: 0px 12px 15px 3px;
+  gap: 10px;
+
+  position: relative;
+  width: 8px;
+  height: 16px;
+  left: -40%;
+  top: -2px;
+
+  border: 1px solid #FF993C;
+  border-radius: 4px;
+}
+.pagination button{
+  background: none;
+  border: 0px;
+}
+.previous{
+  position: absolute;
+  left: -50%;
+  top: 0%;
+}
+.next{
+  position: absolute;
+  left: 50%;
+  top: 0%;
+}
+.page-link{
+  position: relative;
+  width: 8px;
+  height: 8px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: #eab126!important;
+}
+::-webkit-calendar-picker-indicator {
+  filter:  invert(1);
+  background: url(images/datepicker.png) no-repeat scroll 100% 50%;
 }
