--- a/src/App.css
+++ b/src/App.css
@@ -1543,7 +1543,7 @@ bottom: 10%;
   position: relative;
   width: 8px;
   height: 16px;
-  left: -40%;
+  right: 500%;
   top: -2px;
   margin: 6px;
 
@@ -1558,7 +1558,7 @@ bottom: 10%;
   position: relative;
   width: 8px;
   height: 16px;
-  left: -40%;
+  right: 355%;
   top: -2px;
   padding: 0px 12px 15px 3px;
 
@@ -1579,24 +1579,29 @@ bottom: 10%;
   border: 1px solid #FF993C;
   border-radius: 4px;
 }
-.pagination button{
-  background: none;
-  border: 0px;
-}
 .previous{
+  background: none;
+  border: none;
   position: absolute;
   left: -50%;
   top: 0%;
+  cursor: pointer;
 }
 .next{
+  background: none;
+  border: none;
   position: absolute;
   left: 50%;
   top: 0%;
+  cursor: pointer;
 }
+
 .page-link{
   position: relative;
   width: 8px;
   height: 8px;
+  top:0px;
+  left:2px;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
